<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/space_6"
    android:layout_marginEnd="@dimen/space_6"
    android:background="@drawable/surface_dialog"
    android:orientation="vertical"
    android:padding="@dimen/space_6">

    <FrameLayout
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:background="@drawable/icon_tile_danger">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_exit"
            app:tint="@color/danger"
            android:importantForAccessibility="no" />
    </FrameLayout>

    <TextView
        style="@style/Text.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_4"
        android:text="@string/exit_title" />

    <TextView
        style="@style/Text.Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_1"
        android:text="@string/exit_body" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel_exit"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/space_5"
        android:text="@string/exit_cancel" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_exit_temp"
        style="@style/Button.Ghost"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/space_1"
        android:text="@string/exit_temporary"
        android:textColor="@color/warning" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirm_exit"
        style="@style/Button.Ghost"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/space_1"
        android:text="@string/exit_confirm"
        android:textColor="@color/danger" />

</LinearLayout>
