<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_gradient" />

    <!-- Decorative circle -->
    <View
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_centerInParent="true"
        android:background="@drawable/splash_icon_bg" />

    <LinearLayout
        android:id="@+id/splash_mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:background="@drawable/splash_icon_bg">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_logo"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_logo_splash"
                android:importantForAccessibility="no" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_5"
            android:text="@string/app_name"
            android:textColor="#FFFFFFFF"
            android:textSize="28sp"
            android:textStyle="bold"
            android:letterSpacing="-0.01" />

        <TextView
            android:id="@+id/tv_tagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_2"
            android:text="@string/app_tagline"
            android:textColor="#B3FFFFFF"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loading_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/space_10"
        android:gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:indeterminateTint="#B3FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_3"
            android:text="@string/app_loading"
            android:textColor="#80FFFFFF"
            android:textSize="12sp"
            android:letterSpacing="0.04" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/space_6"
        android:text="@string/app_version_short"
        android:textColor="#4DFFFFFF"
        android:textSize="11sp"
        android:letterSpacing="0.06" />

</RelativeLayout>